<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView android:id="@+id/cv_preview1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/greyThin"
    app:layout_constraintTop_toBottomOf="@id/cv_appbar"
    app:cardCornerRadius="10dp"
    app:layout_constraintStart_toStartOf="parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/_24sdp">

        <TextView
            android:id="@+id/tv_choose_doante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:text="@string/choose_donate_method"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_self_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:paddingHorizontal="@dimen/_16sdp"
            android:text="@string/self_service"
            app:layout_constraintEnd_toStartOf="@id/btn_pickup"
            app:layout_constraintTop_toBottomOf="@id/tv_choose_doante"
            app:layout_constraintStart_toStartOf="parent"/>
        <Button
            android:id="@+id/btn_pickup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/_80sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/pickup"
            app:layout_constraintStart_toEndOf="@id/btn_self_service"
            app:layout_constraintTop_toBottomOf="@id/tv_choose_doante"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>