<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.LoginFragment">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:backgroundTint="@color/greenLight"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/progressIndicator"/>


    <TextView
        android:id="@+id/tv_title_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/circlo_login"
        android:textColor="@color/greenLight"
        android:fontFamily="@font/roboto_medium"
        android:textSize="@dimen/_18ssp"
        android:layout_marginTop="@dimen/_36sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_email"
        android:layout_width="match_parent"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_height="@dimen/_44sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginVertical="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:boxStrokeColor="@color/greenLight"
        app:startIconDrawable="@drawable/ic_email"
        android:outlineAmbientShadowColor="@color/greenLight"
        app:layout_constraintTop_toBottomOf="@id/tv_title_login">

        <com.nakama.circlo.utils.customview.EmailCustomView
            android:id="@+id/ed_login_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email_address"
            android:layout_gravity="start"
            android:fontFamily="@font/roboto"
            android:inputType="textEmailAddress"
            android:layout_marginTop="@dimen/_24sdp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_44sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginVertical="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:boxStrokeColor="@color/greenLight"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_password"
        android:outlineAmbientShadowColor="@color/greenLight"
        app:layout_constraintTop_toBottomOf="@id/tl_email">

        <com.nakama.circlo.utils.customview.PasswordCustomView
            android:id="@+id/ed_login_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="@font/roboto"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/_8sdp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_48sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/roboto"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tl_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_google"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_48sdp"
        android:paddingHorizontal="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/roboto"
        app:icon="@drawable/ic_google"
        app:iconGravity="start"
        app:iconTintMode="multiply"
        android:text="Masuk dengan Google"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

    <LinearLayout
        android:id="@+id/linear_info_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_24sdp"
        app:layout_constraintTop_toBottomOf="@id/btn_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_an_account"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_2sdp"
            android:gravity="center_horizontal"
            android:text="@string/register_here"
            android:textColor="@color/greenLight"
            android:fontFamily="@font/roboto"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="parent" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>