<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.RegisterFragment">

    <TextView
        android:id="@+id/tv_title_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Circlo Register"
        android:textColor="@color/greenLight"
        android:fontFamily="@font/roboto_medium"
        android:textSize="@dimen/_18ssp"
        android:layout_marginTop="@dimen/_36sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_first_name"
        android:layout_width="match_parent"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_height="@dimen/_44sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginVertical="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:boxStrokeColor="@color/greenLight"
        app:startIconDrawable="@drawable/ic_person"
        android:outlineAmbientShadowColor="@color/greenLight"
        app:layout_constraintTop_toBottomOf="@id/tv_title_login">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ed_register_first_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/first_name"
            android:layout_gravity="start"
            android:fontFamily="@font/roboto"
            android:inputType="textEmailAddress"
            android:layout_marginTop="@dimen/_24sdp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_last_name"
        android:layout_width="match_parent"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_height="@dimen/_44sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginVertical="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:boxStrokeColor="@color/greenLight"
        app:startIconDrawable="@drawable/ic_person"
        android:outlineAmbientShadowColor="@color/greenLight"
        app:layout_constraintTop_toBottomOf="@id/tl_first_name">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ed_register_last_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/last_name"
            android:layout_gravity="start"
            android:fontFamily="@font/roboto"
            android:inputType="textEmailAddress"
            android:layout_marginTop="@dimen/_24sdp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_username"
        android:layout_width="match_parent"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_height="@dimen/_44sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginVertical="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:boxStrokeColor="@color/greenLight"
        app:startIconDrawable="@drawable/ic_username"
        android:outlineAmbientShadowColor="@color/greenLight"
        app:layout_constraintTop_toBottomOf="@id/tl_last_name">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ed_register_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/username"
            android:layout_gravity="start"
            android:fontFamily="@font/roboto"
            android:inputType="textEmailAddress"
            android:layout_marginTop="@dimen/_24sdp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_email"
        android:layout_width="match_parent"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_height="@dimen/_44sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginVertical="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:boxStrokeColor="@color/greenLight"
        app:startIconDrawable="@drawable/ic_email"
        android:outlineAmbientShadowColor="@color/greenLight"
        app:layout_constraintTop_toBottomOf="@id/tl_username">

        <com.nakama.circlo.util.customview.EmailCustomView
            android:id="@+id/ed_login_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email_address"
            android:layout_gravity="start"
            android:fontFamily="@font/roboto"
            android:inputType="textEmailAddress"
            android:layout_marginTop="@dimen/_24sdp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_44sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginVertical="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:boxStrokeColor="@color/greenLight"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_password"
        android:outlineAmbientShadowColor="@color/greenLight"
        app:layout_constraintTop_toBottomOf="@id/tl_email">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ed_login_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="@font/roboto"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/_8sdp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_48sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:backgroundTint="@color/greenLight"
        android:fontFamily="@font/roboto"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tl_password" />

</androidx.constraintlayout.widget.ConstraintLayout>